monticore-generator/src/test/resources/cocos/invalid/A0278/A0278a.mc4
package cocos.invalid.A0278;

component grammar A0278a{


    interface A;

}